<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.smetayer.calculatrice.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/number1"
            android:hint="@string/number1" />

        <Button
            android:text="@string/addition"
            android:layout_width="match_parent"
            android:digits="true"
            android:layout_height="wrap_content"
            android:id="@+id/addition" />

        <Button
            android:text="@string/soustraction"
            android:digits="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/soustraction" />

        <Button
            android:text="@string/multiplication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="true"
            android:id="@+id/multiplication" />

        <Button
            android:text="@string/division"
            android:digits="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/division" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/number2"
            android:hint="@string/number2" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/result"
            android:hint="@string/result" />
    </LinearLayout>
</LinearLayout>
